--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ teloxide = { version = "0.13", features = ["macros"], optional = true }
 # Discord bot
 serenity = { version = "0.12", features = ["client", "gateway", "model"], optional = true }
 futures-util = "0.3.32"
+ratatui = "0.30.0"
+crossterm = "0.29.0"
 
 [features]
 default = []
