--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,10 @@ futures-util = "0.3.32"
 ratatui = "0.30.0"
 crossterm = "0.29.0"
 
+# Web UI
+axum = "0.8"
+tower-http = { version = "0.6", features = ["cors"] }
+
 [features]
 default = []
 telegram = ["dep:teloxide"]
