feat: complete Phase 11 distribution + add tests for untested modules
- Add crates.io metadata (repository, homepage, keywords, categories)
- Add multi-stage Dockerfile + docker-compose.yml for gateway deployment
- Add Homebrew formula (Formula/quectoclaw.rb)
- Add tests for audit.rs (7 tests: all event types, append-only, dirs)
- Add tests for workflow/parser.rs (7 tests: parsing, variables, errors)
- Add tests for market.rs (6 tests: listing, serialization, types)
- Add tests for agent/memory.rs (4 tests: read/write, dirs, timestamps)
- Add tests for tool/plugin.rs (9 tests: config, loading, registration)
- Remove stale TODO from gateway.rs (Discord/Slack already wired up)
- Update plan.md: mark Phase 11 complete, update test count to 80+

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ edition = "2021"
 description = "QuectoClaw — Ultra-efficient AI assistant in Rust"
 license = "Apache-2.0"
 authors = ["QuectoClaw contributors"]
+repository = "https://github.com/mohammad-albarham/QuectoClaw"
+homepage = "https://github.com/mohammad-albarham/QuectoClaw"
+documentation = "https://docs.rs/quectoclaw"
+readme = "README.md"
+keywords = ["ai", "assistant", "llm", "cli", "agent"]
+categories = ["command-line-utilities", "development-tools"]
 
 [[bin]]
 name = "quectoclaw"
